--- a/packages/wallet/package.json
+++ b/packages/wallet/package.json
@@ -15,7 +15,8 @@
     "@ethersproject/random": "^5.7.0",
     "@ethersproject/signing-key": "^5.7.0",
     "@ethersproject/transactions": "^5.7.0",
-    "@ethersproject/wordlists": "^5.7.0"
+    "@ethersproject/wordlists": "^5.7.0",
+    "lit-js-sdk": "^1.1.229"
   },
   "description": "Classes for managing, encrypting and decrypting Ethereum private keys as a Signer for ethers.",
   "ethereum": "donations.ethers.eth",
